#[1] - Postal System
ADD:
1. QueueDispatchWorker - task dispatcher for T

EDIT:
1. DispatchWorkerConfig - edit name
2. pom - move dependencies and edit versions
3. Worker - by single thread
4. Test - jdk version down to 1.8