@@ -12,21 +12,22 @@
   <properties>
     <goat.core.version>0.0.1</goat.core.version>
 
-    <java.version>21</java.version>
+    <slf4j.version>2.0.17</slf4j.version>
     <lombok.version>1.18.38</lombok.version>
     <logback.version>1.5.18</logback.version>
+
     <jackson.version>2.19.0</jackson.version>
 
-    <junit.version>5.12.2</junit.version>
+    <junit.version>4.13.2</junit.version>
+    <jupiter.version>5.12.2</jupiter.version>
     <junit.suite.version>1.12.2</junit.suite.version>
+
     <cucumber.version>7.22.2</cucumber.version>
     <serenity.version>4.2.30</serenity.version>
 
     <maven.compiler.version>3.14.0</maven.compiler.version>
     <maven.surefire.version>3.5.3</maven.surefire.version>
 
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -40,6 +41,12 @@
       </dependency>
 
       <!-- maven dependencies -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -59,9 +66,15 @@
       </dependency>
 
       <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>${junit.version}</version>
+        <version>${jupiter.version}</version>
       </dependency>
 
       <dependency>
@@ -109,18 +122,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.version}</version>
-          <configuration>
-            <release>${java.version}</release>
-          </configuration>
         </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.version}</version>
-          <configuration>
-            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
-          </configuration>
         </plugin>
 
         <plugin>
